--- a/src/Launcher/wwwroot/sys/juicy-tile-grid/juicy-tile-grid.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-grid/juicy-tile-grid.html
@@ -75,6 +75,7 @@ version: 1.2.4
         */
     </style>
     <content select="script" class="not-a-tile"></content>
+    <content select="style" class="not-a-tile"></content>
 </template>
 
 <script>
