--- a/src/Launcher/wwwroot/sys/juicy-tile-grid/juicy-tile-grid.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-grid/juicy-tile-grid.html
@@ -3,7 +3,7 @@
 
 @element juicy-tile-grid
 @demo https://Juicy.github.io/juicy-tile-grid/
-version: 1.2.4
+version: 1.2.5
 -->
 <!-- Import juicy-tile-list -->
 <link rel="import" href="../juicy-tile-list/src/juicy-tile-list.html">
@@ -80,19 +80,19 @@ version: 1.2.4
 
 <script>
     (function (scriptDocument) {
+        var template = scriptDocument.querySelector("#juicy-tile-grid");
+        if (window.ShadowDOMPolyfill) {
+            WebComponents.ShadowCSS.shimStyling(template.content, 'juicy-tile-grid');
+        }
         var tileDecorator = scriptDocument.getElementById("juicy-tile").content;
         var JuicyTileGridPrototype = Object.create(JuicyTileList.prototype);
         var proto = JuicyTileGridPrototype;
 
         proto.attachedCallback = function gridAttached() {
             var root = this.createShadowRoot();
-            var template = scriptDocument.querySelector("#juicy-tile-grid");
             var clone = document.importNode(template.content, true);
 
             // IE/polyfill support
-            if (window.ShadowDOMPolyfill) {
-                WebComponents.ShadowCSS.shimStyling(clone, 'juicy-tile-grid');
-            }
             //
             root.appendChild(clone);
             this.shadowContainer = root;
