--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-border-picker.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-border-picker.html
@@ -127,7 +127,8 @@
                 },
                 borderValue: {
                     type: String,
-                    observer: "borderValueChanged"
+                    observer: "borderValueChanged",
+                    notify: true
                 },
                 borderStyle: {
                     type: String,
