Disable precalculateHeight as it acts weird in juicy-tile-grid

--- a/src/Launcher/wwwroot/sys/starcounter-include/starcounter-include.html
+++ b/src/Launcher/wwwroot/sys/starcounter-include/starcounter-include.html
@@ -24,7 +24,7 @@ version: 0.1.1
         defaultTileSetup='{
             "height": 1,
             "heightDynamic": true,
-            "precalculateHeight": true,
+            "precalculateHeight": false,
             "width": "100%",
             "widthFlexible": true
         }'
