--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-simple-editor.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-simple-editor.html
@@ -13,7 +13,7 @@
             <button on-click="closeEditor">Close</button>
             <button class$="{{getTabButtonCss('normal', showMore)}}" on-click="toggleMore">Normal</button>
             <button class$="{{getTabButtonCss('expert', showMore)}}" on-click="toggleMore">Expert</button>
-            <button on-click="toggleTree">Toggle sidebar</button>
+            <button on-click="toggleTree">Sidebar</button>
         </div>
         <template is="dom-if" if="{{!showMore}}">
             <div class="editor-simple-form">
