Temp change to juicy-tile-grid

--- a/src/Launcher/wwwroot/sys/starcounter-include/starcounter-include.html
+++ b/src/Launcher/wwwroot/sys/starcounter-include/starcounter-include.html
@@ -20,7 +20,7 @@ version: 0.1.1
 <template id="partial-template">
     <juicy-tiles-setup-sync
         api-url="/sc/layout"></juicy-tiles-setup-sync>
-    <juicy-tile-table
+    <juicy-tile-grid
         defaultTileSetup='{
             "height": 1,
             "heightDynamic": true,
@@ -29,7 +29,7 @@ version: 0.1.1
         }'
         refreshonmutation>
       <template is="imported-template"></template>
-    </juicy-tile-table>
+    </juicy-tile-grid>
 </template>
 <script>
   (function () {
