Use Juicy/juicy-tile-table in layncher-launchpad
fixes StarcounterPrefabs/Launcher/issues/198

--- a/src/Launcher/wwwroot/Launcher/elements/launcher-launchpad/launcher-launchpad.html
+++ b/src/Launcher/wwwroot/Launcher/elements/launcher-launchpad/launcher-launchpad.html
@@ -53,9 +53,9 @@
             }
         </style>
         <juicy-tiles-setup-sync api-url="/sc/layout" name="/Launcher/launchpad" storedValue="{{layout}}"></juicy-tiles-setup-sync>
-        <!-- <juicy-tile-grid defaulttilesetup='{ "height": 82, "width": 80}' gutter="10" refreshonmutation name="/Launcher/launchpad"> -->
-        <juicy-tile-grid defaulttilesetup='{ "height": 82, "width": 80}' gutter="10" refreshonmutation name="/Launcher/launchpad" setup='[[cloneJSON(layout)]]'>
-        <!-- <juicy-tile-grid defaulttilesetup='{ "height": 82, "width": 80}' gutter="10" refreshonmutation name="/Launcher/launchpad" setup='{"width": 1000, "items": []}'> -->
+        <!-- <juicy-tile-table defaulttilesetup='{ "height": 98, "width": 80}' gutter="10" refreshonmutation name="/Launcher/launchpad"> -->
+        <juicy-tile-table defaulttilesetup='{ "height": 98, "width": 80}' gutter="10" refreshonmutation name="/Launcher/launchpad" setup='[[cloneJSON(layout)]]'>
+        <!-- <juicy-tile-table defaulttilesetup='{ "height": 98, "width": 80}' gutter="10" refreshonmutation name="/Launcher/launchpad" setup='{"width": 1000, "items": []}'> -->
             <template is="dom-repeat" items="{{appsArray}}">
                 <div class="launchpad-tile">
                     <a href="{{item.url}}">
@@ -66,7 +66,7 @@
                     </a>
                 </div>
             </template>
-        </juicy-tile-grid>
+        </juicy-tile-table>
     </template>
     <script>
         Polymer({
@@ -95,7 +95,7 @@
               }
             },
             // layoutChanged: function(newVal){
-            //   newVal && this.shadowRoot.getElementByTagName('juicy-tile-grid').setup = JSON.parse(JSON.stringify(newVal));
+            //   newVal && this.shadowRoot.getElementByTagName('juicy-tile-table').setup = JSON.parse(JSON.stringify(newVal));
             // },
             appsChanged: function (newVal, oldVal) {
                 var array = [];
